--- a/Server/gRPC.Server.csproj
+++ b/Server/gRPC.Server.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.23.1" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.30.0-pre1" />
+    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.30.0-pre1" />
   </ItemGroup>
 
 </Project>
